--- a/Primera pagina/styles/styles.css
+++ b/Primera pagina/styles/styles.css
@@ -33,3 +33,102 @@ header{
     border-radius: 100%;
     border: 2px solid #ffff;
 }
+
+#hero{
+    position: relative;
+}
+
+#hero #computadora{
+    display: inline-block;
+    width: 100%;
+}
+
+#hero .informacion-contenedor{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#hero .informacion-contenedor #foto{
+    width: 150px;
+}
+
+#hero .informacion-contenedor #foto img{
+    border-radius: 20%;
+}
+
+#hero .informacion-contenedor{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    width: 100%;
+    color: #ffffff;
+    padding: 0px 50px;
+}
+
+#hero .informacion-contenedor .informacion span{
+    color: burlywood;
+    margin-bottom: 70px;
+    display: inline-block;
+}
+
+#hero .informacion-contenedor{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    display: flex;
+    width: 100%;
+    color: #ffff;
+    padding: 0 50px;
+}
+
+/*Estilos del main*/
+
+main{
+    padding: 100px;
+}
+
+main .social-icons{
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    list-style: none;
+}
+
+main .social-icons li{
+    margin-left: 8px;
+}
+
+main .social-icons .social-icon{
+    background: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+}
+
+main .social-icons #LinkedIn{
+    background: #0077b0;
+
+}
+
+main .social-icons #Github{
+    background: #23272d;
+}
+
+main .social-icons #Twitter{
+    background: #1da1f2;
+}
+
+main .social-icons #Youtube{
+    background: #f70000;
+}
+
+main .social-icons #Platzi{
+    background-color: #121f3d;
+}
